Added test class for AccessControlListTag.